# TensorRTClassifier

./: LICENSE  README.md
app/perf_eval/: CMakeLists.txt  main.cpp  output.txt  resnet50.ff  run_docker.sh  run_locally.sh
app/trt_gen_tool/: CMakeLists.txt  main.cpp  resnet50.ff  run_docker.sh  run_locally.sh
datasets/imagenet/: val.txt
dockerfiles/: README.md  dockerfile
include/: classifier.h  common.h  convert.h  file_util.h  math_util.h  time_util.h
models/: README.md
models/resnet50/: resnet50_trt_mean.txt
src/: classifier.cpp
